<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="24dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/close_button"
            android:layout_marginTop="24dp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@drawable/close"
            android:layout_alignParentEnd="true"
            />
        <TextView
            android:id="@+id/about_us"
            android:layout_marginTop="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="24dp"
            android:text="@string/about_us"
            android:textColor="@color/gentle_blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/track_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_us"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="24dp"
            android:text="@string/track_child"
            android:textColor="@color/gentle_blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/track_child"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_out"
            android:textColor="@color/gentle_blue"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:clickable="true"
        android:focusable="true">
        <FrameLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:elevation="30dp"
            android:visibility="gone" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:src="@drawable/settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/cordon"
                android:textSize="36dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/child_spinner"
                android:minHeight="46dp"
                android:minWidth="50dp"
                android:layout_marginTop="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:dropDownWidth="wrap_content"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerview"
                android:layout_marginTop="200dp"
                android:padding="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <TextView
                android:id="@+id/message_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/welcome_message"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/permission_layout"
        android:background="@color/circle_fill_red"
        android:visibility="gone">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:id="@+id/button_permission"
                android:text="@string/location_permission"
                android:visibility="gone"
                android:background="@drawable/primary_button_white"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_message"
                android:layout_marginBottom="24dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/button_permission" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</FrameLayout>